[metadata]
name = odc-geo
description = Geometry Classes and Operations (opendatacube)
version = attr: odc.geo._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/x-rst
long_description = file: README.rst
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-geo/
project_urls =
   Documentation = https://odc-geo.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/opendatacube/odc-geo/issues

classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.8
install_requires =
    affine
    cachetools
    numpy
    pyproj
    shapely

[options.extras_require]
xr =
    xarray>=0.19

warp =
    rasterio

all =
    rasterio
    xarray>=0.19

test =
    pytest


[options.packages.find]
include =
  odc*

[options.package_data]
* =
  *.yaml
  *.yml