[metadata]
name = odc-geo
description = Geometry Classes and Operations (opendatacube)
version = attr: odc.geo._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/x-rst
long_description = file: README.rst
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-geo/
project_urls =
   Documentation = https://odc-geo.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/opendatacube/odc-geo/issues

classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
    Typing :: Typed

[options]
include_package_data = True
zip_safe = False
packages = find_namespace:
python_requires = >=3.8
install_requires =
    affine
    cachetools
    numpy
    pyproj>=3.0.0
    shapely

[options.extras_require]
xr =
    xarray>=0.19

warp =
    rasterio

tiff =
    tifffile
    imagecodecs
    dask[array,distributed]
    %(warp)s
    %(xr)s

s3 =
    boto3

all =
    %(warp)s
    %(tiff)s
    %(s3)s

test =
    pytest
    geopandas
    %(tiff)s


[options.packages.find]
include =
  odc*

[options.package_data]
odc.geo =
    py.typed
odc.geo.data =
   *.geojson.xz
   *.css
